se agrego diferentes rutas get para empezar a enviar datos del backend al frontend

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +20,12 @@
   },
   "homepage": "https://github.com/JUANDIG0MEZ/inventarioBackend#readme",
   "dependencies": {
-    "express": "^4.21.2"
+    "cors": "^2.8.5",
+    "express": "4.21.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@faker-js/faker": "^9.4.0",
     "eslint": "^9.19.0",
     "globals": "^15.14.0"
   }
