seactualizo .iginnore para no aceptar imagenes en el github. por otro lado, ya se pueden subir y obtener imagenes

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,12 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows,linux
+
+# Images
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.ico
