--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/JUANDIG0MEZ/inventarioBackend#readme",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "cors": "^2.8.5",
     "express": "4.21.2",
     "multer": "^1.4.5-lts.1",
