se mejoro el backend para realizar la sincronizacion entre la deuda de las compras y ventas con las deudas

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "database": "cd ./src/database && npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "sincronizar": "cd ./src/servicios && node sincronizacion.js"
   },
   "repository": {
     "type": "git",
