--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -4,8 +4,9 @@
     "password": "tunclave",
     "database": "inventarioFull",
     "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
+    "dialect": "mysql",
+    "logging": false
+   },
   "test": {
     "username": "root",
     "password": null,
