--- a/package.json
+++ b/package.json
@@ -34,10 +34,17 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
     "@faker-js/faker": "^9.4.0",
-    "eslint": "^9.19.0",
-    "globals": "^15.14.0",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "standard": "^17.1.2"
+  },
+  "standard": {
+    "env": [
+      "node",
+      "jest"
+    ],
+    "ignore": [
+      "node_modules/**"
+    ]
   }
 }
