--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cors": "^2.8.5",
     "express": "4.21.2",
     "joi": "^17.13.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
@@ -39,11 +39,18 @@
     "standard": "^17.1.2"
   },
   "standard": {
-    "env": ["node", "jest"],
+    "env": [
+      "node",
+      "jest"
+    ],
     "ignore": [
       "node_modules/**"
     ],
-    "globals": ["describe", "it", "expect"],
+    "globals": [
+      "describe",
+      "it",
+      "expect"
+    ],
     "rules": {
       "camelcase": "off"
     }
