--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@hapi/boom": "^10.0.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "4.21.2",
+    "express": "^5.1.0",
     "joi": "^17.13.3",
     "multer": "^2.0.1",
     "mysql2": "^3.12.0",
