--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@hapi/boom": "^10.0.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.4.0",
+    "@types/node": "^24.0.4",
     "sequelize-auto": "^0.8.8",
     "standard": "^17.1.2"
   },
