--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^7.0.3",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
   },
