--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mysql2": "^3.12.0",
     "nodemailer": "^7.0.3",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.4.0",
